[package]
name = "imgui-renderer-dx11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
imgui = "0.8.2"
rand = "0.8.5"
[target.'cfg(target_os = "windows")'.dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11" ,
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies.windows]
git = "https://github.com/microsoft/windows-rs"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc"
]

