[package]
name = "imgui-renderer-dx11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
imgui = "0.8.2"
static_assertions = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.42.0"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11" ,
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
]

[build-dependencies.windows]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D_Fxc"
]

[features]
strict-provenance = []