[package]
name = "imgui-renderer-ogl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opengl-bindings = { path = "../opengl-bindings" }
imgui = "0.8.2"
thiserror = "1"
ouroboros = "0.14.2"
field-offset = "0.3.4"
static_assertions = "1.1.0"
