[package]
name = "snowflake-ingame"
version = "0.1.0"
edition = "2021"

[lib]
crate-type=["rlib", "cdylib"]

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.32"
features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11" ,
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_OpenGL",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Hlsl",
    "Win32_System_Console",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
detour = { version = "0.8.1", features = ["nightly"] }
indexmap = "1.8"
opengl-bindings = { path = "../opengl-bindings" }
tokio = { version = "1.17.0", features = ["full"] }

ipipe = { version = "0.11", features = ["static_pipe", "channels"] }
uuid = "0.8"